# pyfssa

./: pyproject.toml
fssa/: __init__.py  fssa.py  optimize.py
